--- a/frontend-part/login.html
+++ b/frontend-part/login.html
@@ -2,51 +2,62 @@
 <html>
 <head>
     <title>Login</title>
-</head>
+    <link rel="stylesheet" href="login.css"> </head>
 <body>
 
-<h2>Login</h2>
+<div id="page-container">
+    
+    <div id="login-card">
+        
+        <h2 id="card-header">Welcome Back to WriteFlow</h2>
+        <p id="card-subtitle">Enter your account to continue.</p>
 
-<form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required /><br><br>
-    <input type="password" id="password" placeholder="Password" required /><br><br>
-    <button type="submit">Login</button>
-</form>
+        <form id="loginForm">
+            <input type="email" id="email" placeholder="Email" required /><br><br>
+            <input type="password" id="password" placeholder="Password" required /><br><br>
+            <button type="submit">Login</button>
+        </form>
 
-<p id="message" style="color:red;"></p>
+        <p id="message" style="color:red;"></p>
+
+        <p id="register-nav">Don't have an account? <a href="register.html" id="register-link">Register</a></p>
+
+    </div>
+</div>
 
 <script>
+// YOUR ORIGINAL INLINE JAVASCRIPT LOGIC - EXACTLY AS PROVIDED
 document.getElementById("loginForm").addEventListener("submit", function(e){
-    e.preventDefault();
+    e.preventDefault();
 
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value;
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value;
 
-    fetch("http://localhost:8080/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ email, password })
-    })
-    .then(async res => {
-        if(res.status === 200){
-            const user = await res.json();
-            localStorage.setItem("user", JSON.stringify(user)); // save logged in user
+    fetch("http://localhost:8080/login", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ email, password })
+    })
+    .then(async res => {
+        if(res.status === 200){
+            const user = await res.json();
+            localStorage.setItem("user", JSON.stringify(user)); // save logged in user
 
-            if(user.role === "ADMIN"){
-                location.href = "admin.html"; // go to admin page
-            } else {
-               // alert("Logged in as regular user");
-                location.href = "myblogs.html"; // regular user page
-            }
-        } else {
-            const err = await res.text();
-            document.getElementById("message").innerText = err;
-        }
-    })
-    .catch(err => {
-        console.error(err);
-        document.getElementById("message").innerText = "Server error";
-    });
+            if(user.role === "ADMIN"){
+                location.href = "admin.html"; // go to admin page
+            } else {
+               // alert("Logged in as regular user");
+                location.href = "myblogs.html"; // regular user page
+            }
+        } else {
+            const err = await res.text();
+            document.getElementById("message").innerText = err;
+        }
+    })
+    .catch(err => {
+        console.error(err);
+        document.getElementById("message").innerText = "Server error";
+    });
 });
 </script>
 
