just the symbol of have been added in above files

--- a/frontend-part/blog.html
+++ b/frontend-part/blog.html
@@ -9,7 +9,7 @@
 
 <header id="site-header">
     <div class="header-content">
-        <h1 class="site-title">WriteFlow<span class="logo-accent">.</span></h1>
+        <h1 class="site-title">🌟 WriteFlow<span class="logo-accent">.</span></h1>
     </div>
 </header>
 
