--- a/frontend-part/edit.html
+++ b/frontend-part/edit.html
@@ -9,7 +9,7 @@
 
 <div id="page-wrapper">
     
-    <h1 id="page-title">WriteFlow – Edit Blog</h1> 
+    <h1 id="page-title">🌟 WriteFlow – Edit Blog</h1> 
 
     <div id="blog-card">
         
