--- a/frontend-part/login.html
+++ b/frontend-part/login.html
@@ -9,7 +9,7 @@
     
     <div id="login-card">
         
-        <h2 id="card-header">Welcome Back to WriteFlow</h2>
+        <h2 id="card-header">Welcome Back to 🌟 WriteFlow</h2>
         <p id="card-subtitle">Enter your account to continue.</p>
 
         <form id="loginForm">
